integration/src/test/resources/templates/invalid-target/wasm-nodejs/build.gradle
kotlin {
    wasm("wasmJs") {
        nodejs()
    }
}

benchmark {
    targets {
        register("wasmJs")
    }
}
